modules/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: backend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: tanishqjaiswal/infra-frontend:v9
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: backend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30081
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
#   namespace: backend
#   # labels:
#   #   app.kubernetes.io/name: frontend-ingress
# spec:
#   rules:
#   - host: tanishq.appperfect.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: frontend-service
#             port: 
#               number: 80
